=======
HISTORY
=======

1.5 (unreleased)
================

- Nothing changed yet.


1.4.1 (2012-11-30)
==================

* Fixed views with special column handling
  [tom_gross]

1.4 - 2012-09-09
================

* enhanced error catching in SearchableText-method
  [tom_gross]
* prevent redirection to external link in navtree 
  [petschki]

1.3 - 2012-03-30
================

* remove workaround for Plone 2.5 which breaks with c.flowplayer 
  in Plone 4.2b1 [tom_gross]
* moved code to github.com.
  [tom_gross, malthe]

1.3b3 - 2011-07-17
==================

* minor cleanup, object_title was being used inconsistently  [auspex]

* make it work in Plone 4 [ yurj, jensens]

1.3-beta2 - 2010-07-27
======================

* moved z2-Interface to z3-interface
* fixed `window_view` to work with Plone 4.0
* added inherit_protocol flag, which allows to inherit the protocol schema
* use '_' to mark messagestrings in code
* use GenericSetup-profile for installing product
* factored out stripogram. it is an egg dependency now.
* The WindowZTool is no content any longer
* Added form-enabled configlet
* changed compatibility to Plone 3 and 4
* added German translations.

[tom_gross]

1.3-beta
========

* Eggified product

1.2.1 - 2008-06-03
==================

* Added Danish translations.
  [jacobv]

1.2 - 2007-08-21
================

* Added show_window template to show external sites inside portal just
  providing the site URL as a value for the url variable.
  [ferri]

* Added tests from default ArchGenXML support.
  [ferri]

* Moved document_byline macro at view template.
  [ferri]

* Plone 3.0 compatibility.
  [ferri]

* Regenerated with the last ArchGenXML from 1.5 branch.
  [ferri]

* Added French translations.
  [landure]

* Included stripogram as an embeded library in windowZ. Now it's not a
  dependencie anymore.
  [ferri]

1.1 - 2006-09-12
================

* Provided migration script to migrate objects and configurations from
  CMFDisplayPage to windowZ.
  [ferri]
